--- a/src/Scenes/Scene_1/index.html
+++ b/src/Scenes/Scene_1/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tenebris Damnation</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>    
+    
     <canvas id="canvas1"></canvas>
 
-
-    <img src="../../Characters/Ridden/Idle/ridden_idle_unequipped_right.gif" id="ridden_idle_unequipped_right">
-    <img src="../../Characters/Ridden/Idle/ridden_idle_unequipped_left.gif" id="ridden_idle_unequipped_left">
-
-    <img src="../../Characters/Ridden/Running/Right/Run_Right.gif" id="ridden_run_right">
-    <img src="../../Characters/Ridden/Running/Left/Run_Left.gif" id="ridden_run_left">
+    <img src="../../../src/Backgrounds/MainMenu/dev_logo.png" id="dev_logo">
+    <img src="../../../src/Buttons/play_button.png" id="button_start">
+    <img src="../../../src/Backgrounds/MainMenu/brand_logo.png" id="image_cartola">
+    <img src="../../../src/Backgrounds/MainMenu/brand_logo.png" id="image_cartas">
 
 
-    <script src="../Scene_1/script.js" type="module"></script>
+    <script src="./script.js" type="module"></script>
 
 </body>
 </html>
